Edited wiki page TechnicalDetails through web user interface.
git-svn-id: http://crunch.googlecode.com/svn@244 c8dd57aa-ad96-7fdf-15b8-99d5455c0426

--- a/wiki/TechnicalDetails.wiki
+++ b/wiki/TechnicalDetails.wiki
@@ -30,7 +30,7 @@ http://crunch.googlecode.com/svn/wiki/crunch_macroblock_tiles.png
 
 Notice that the more complex areas of the image contain smaller tiles, so these image areas get assigned more endpoints. Simpler areas use larger tiles, so the DXT1 blocks in these tiles are constrained to share the same endpoints. Also, a single color endpoint pair can be shared by many tiles, independent of their location in the image.
 
-The endpoint/selector palettes are shared by all mipmap levels. This can be a performance problem if random access to smaller mipmap levels is needed, because a level can't be transcoded until the palettes are first decompressed. Possible workarounds are to use a palette cache, or use two .CRN files (with the smallest mips using smaller palettes), or just using plain DXTn on the smallest mipmap levels.
+The endpoint/selector palettes are shared by all mipmap levels.
 
 For each tile, a compressed index is sent to select the macroblock tile arrangement, followed by between one to four DPCM+Huffman compressed endpoint palette indices. Four selector indices (again coded using DPCM+Huffman) are always sent immediately after the endpoint(s). The macroblock rows are raster scanned in a serpentine order: left->right, then right->left, etc.)
 
