--- a/wiki/TechnicalDetails.wiki
+++ b/wiki/TechnicalDetails.wiki
@@ -90,6 +90,6 @@ The endpoint clusterization step uses top-down [http://en.wikipedia.org/wiki/Clu
 
 Most of the compression steps are multithreaded in a relatively straightforward way: subdivide the work into independent threadpool tasks, fork to multiple threads, then join. The clusterizer is also multithreaded, where it forks to multiple threads after the initial tree subdivision steps.
 
-The .CRN format currently utilizes canonical Huffman coding for speed. The symbol codelengths for each Huffman table are sent in a simple compressed manner after the header (like Deflate). 
+The .CRN format currently utilizes [http://en.wikipedia.org/wiki/Canonical_Huffman_code canonical Huffman coding] for speed. The symbol codelengths for each Huffman table are sent in a simple compressed manner after the header (like Deflate). 
 
 Given a fixed amount of additional developer time to improve .CRN's bitrate/quality, I think the backend would benefit the most from more work. (So far, much more effort has been devoted to the DXT1 endpoint optimizer and the frontend stages.) The current format is probably favoring transcoding speed too highly vs. ratio. Also, the Huffman tables contain too many symbols.
