Edited wiki page KnownProblems through web user interface.
git-svn-id: http://crunch.googlecode.com/svn@259 c8dd57aa-ad96-7fdf-15b8-99d5455c0426

--- a/wiki/KnownProblems.wiki
+++ b/wiki/KnownProblems.wiki
@@ -3,7 +3,7 @@
 
 = Known Issues/Bugs =
 
- * .DDS files written by crunch (and output by crnlib) don't have the pitch/linearsize fields set in the DDS header. Some DDS readers expect valid values here (and expect the DDSD_LINEARSIZE flag to be set too). I've fixed this issue locally, and I'll release the fix in the next update after more testing.
+ * .DDS files written by crunch v1.00 (and output by crnlib v1.00) don't have the pitch/linearsize fields set in the DDS header. Some DDS readers expect valid values here (and expect the DDSD_LINEARSIZE flag to be set too). This should be fixed in v1.01.
 
  * You really should provide crnlib with raw, 24/32-bit source images. Don't provide it with second generation textures that have already been DXTn or JPEG compressed. (You can do it, but obviously don't expect the best results.)
 
