--- a/wiki/API_Docs.wiki
+++ b/wiki/API_Docs.wiki
@@ -21,7 +21,7 @@
 
 crnlib is a C++ library designed to be statically linked into the calling application. It can compress to .CRN, regular .DDS, or clustered .DDS files. It can also transcode .CRN to .DDS, and unpack .DDS files to individual 24/32-bit images. For completeness, crnlib's high-quality DXTn block compressor is also accessible. 
 
-The library does not use C++ exceptions, but it does use some C++ features such as templates, virtual functions, and inheritance. It also makes heavy use of heap allocation. Due to porting, exception, and inconsistent performance issues (especially in debug builds) crnlib uses custom containers instead of STL.
+The library does not use C++ exceptions, but it does use some C++ features such as templates, virtual functions, and inheritance. It also makes heavy use of heap allocation. Due to porting, exception, and inconsistent performance issues (especially in debug builds) crnlib  mostly uses custom containers instead of STL.
 
 The VC9 (Visual Studio 2008) .LIB files are built here:
 
