Edited wiki page API_Docs through web user interface.
git-svn-id: http://crunch.googlecode.com/svn@271 c8dd57aa-ad96-7fdf-15b8-99d5455c0426

--- a/wiki/API_Docs.wiki
+++ b/wiki/API_Docs.wiki
@@ -228,7 +228,7 @@ enum crn_dxt_compressor_type
 };
 }}}
 
-This enum lists the DXTn block compressors supported by the library. Only enum is only relevant when compressing to non-clustered .DDS files.
+This enum lists the DXTn block compressors supported by the library. This enum is only relevant when compressing to non-clustered .DDS files.
 
 `cCRNDXTCompressorCRN`: crnlib's default endpoint optimizer.
 
