--- a/wiki/KnownProblems.wiki
+++ b/wiki/KnownProblems.wiki
@@ -23,4 +23,4 @@ crnlib's custom DXT1 endpoint optimizer can detect pixel blocks which have been 
 
  * Ignore the SSIM statistics printed when using the -imagestats option - it's currently bogus. I've been tuning the codec using PSNR/RMSE so far.
 
- * The crn_decomp.h header file library is freaking huge (~4800 lines). It would be nice to port it to C and shrink it. Also, crnlib is Win32 only.
+ * The crn_decomp.h header file library is freaking huge (~4800 lines). It would be nice to port it to C and shrink it.
