--- a/wiki/TechnicalDetails.wiki
+++ b/wiki/TechnicalDetails.wiki
@@ -84,7 +84,7 @@ The compressor is very complex, partially due to the weird and surprisingly deep
 
 The frontend, located in [http://code.google.com/p/crunch/source/browse/trunk/crnlib/crn_dxt_hc.cpp dxt_hc.cpp/h], takes the 24/32bpp source texture mipmaps as inputs. It adaptively subdivides the texture macroblocks into tiles, finds the endpoint and selector clusters, and then generates optimized, but unordered palettes based off these clusters. The backend, located in [http://code.google.com/p/crunch/source/browse/trunk/crnlib/crn_comp.cpp crn_comp.cpp/h] takes the raw palettes, macroblock tile layouts, and indices supplied by the frontend and tries to efficiently code them.
 
-The color endpoint palettes are created from their source clusters using a very high quality, scalable DXT1 endpoint optimizer located in [http://code.google.com/p/crunch/source/browse/trunk/crnlib/crn_dxt1.cpp crn_dxt1.cpp/h]. This custom optimizer is capable of processing any number of source pixels, instead of the typical hard coded 16. crnlib's DXT1 endpoint optimizer's quality (in a PSNR sense) is comparable to ATI's, NVidia's, or squish's. (I verified this while building the endpoint optimizer by randomly extracting millions of 4x4 pixel blocks from a large corpus of game textures and photos, compressing->decompressing them using each compressor, and comparing the results. I hope to eventually release this tool.)
+The color endpoint palettes are created from their source clusters using a very high quality, scalable DXT1 endpoint optimizer located in [http://code.google.com/p/crunch/source/browse/trunk/crnlib/crn_dxt1.cpp crn_dxt1.cpp/h]. This custom optimizer is capable of processing any number of source pixels, instead of the typical hard coded 16. crnlib's DXT1 endpoint optimizer's quality (in a PSNR sense) is comparable to ATI's, NVidia's, or squish's. (I verified this while building the endpoint optimizer by randomly extracting millions of 4x4 pixel blocks from a large corpus of game textures and photos, compressing->decompressing them using each compressor, comparing the results, and ruthlessly investigating and fixing any blocks where crnlib's output was lower quality. I hope to eventually release this tool.)
 
 The endpoint clusterization step uses top-down [http://en.wikipedia.org/wiki/Cluster_analysis cluster analysis], and [http://en.wikipedia.org/wiki/Vector_quantization vector quantization] is used to create the initial selector palette. The frontend performs several feedback passes, in between the clusterization and VQ steps, to optimize quality, and the compressor can optionally use several brute force refinement stages to improve quality even more.
 
