--- a/wiki/TechnicalDetails.wiki
+++ b/wiki/TechnicalDetails.wiki
@@ -86,7 +86,7 @@ The frontend, located in [http://code.google.com/p/crunch/source/browse/trunk/cr
 
 The color endpoint palettes are created from their source clusters using a very high quality, scalable DXT1 endpoint optimizer located in [http://code.google.com/p/crunch/source/browse/trunk/crnlib/crn_dxt1.cpp crn_dxt1.cpp/h]. This custom optimizer is capable of processing any number of source pixels, instead of the typical hard coded 16. crnlib's DXT1 endpoint optimizer's quality (in a PSNR sense) is comparable to ATI's, NVidia's, or squish's. (I verified this while building the endpoint optimizer by randomly extracting millions of 4x4 pixel blocks from a large corpus of game textures and photos, compressing->decompressing them using each compressor, comparing the results, and ruthlessly investigating and fixing any blocks where crnlib's output was lower quality. I hope to eventually release this tool.) 
 
-Interestingly, crnlib's DXT1 endpoint optimizer is better than squish or ATI_Compress (in a PSNR sense), and of comparable speed, without using a single line of SIMD or assembly code.
+Interestingly, crnlib's DXT1 endpoint optimizer is equal or better than squish or ATI_Compress (in a PSNR sense), and of comparable speed, without using a single line of SIMD or assembly code.
 
 The endpoint clusterization step uses top-down [http://en.wikipedia.org/wiki/Cluster_analysis cluster analysis], and [http://en.wikipedia.org/wiki/Vector_quantization vector quantization] is used to create the initial selector palette. The frontend performs several feedback passes, in between the clusterization and VQ steps, to optimize quality, and the compressor can optionally use several brute force refinement stages to improve quality even more.
 
