Edited wiki page TechnicalDetails through web user interface.
git-svn-id: http://crunch.googlecode.com/svn@295 c8dd57aa-ad96-7fdf-15b8-99d5455c0426

--- a/wiki/TechnicalDetails.wiki
+++ b/wiki/TechnicalDetails.wiki
@@ -94,4 +94,19 @@ Most of the compression steps are multithreaded in a relatively straightforward 
 
 The .CRN format currently utilizes [http://en.wikipedia.org/wiki/Canonical_Huffman_code canonical Huffman coding] for speed. The symbol codelengths for each Huffman table are sent in a simple compressed manner after the header (like Deflate). 
 
+----
+
+== The Path Forward ==
+
 Given a fixed amount of additional developer time to improve .CRN's bitrate/quality, I think the backend would benefit the most from more work. (So far, much more effort has been devoted to the DXT1 endpoint optimizer and the frontend stages.) The current format is probably favoring transcoding speed too highly vs. ratio. Also, the Huffman tables contain too many symbols, and alternatives to the DPCM coding should be explored.
+
+Ideas for crunch v2.0:
+- Support for PVRTC (iOS) and ETC (Android) texture formats
+- Use techniques from LZHAM to greatly improve backend coding (mix bitwise arithmetic with semi-adaptive Huffman)
+- Port transcoder library to plain C vs. C++
+- Native Javascript transcoders
+- Palette compression improvements
+- Split mipchain from mip0, so individual mips can be transcoded more quickly
+- Support "raw" CRN files that use no additional compression (assume they will be post-compressed by the user using gzip or LZMA - useful for Javascript/WebGL)
+- Support uncompressed palettes, for high speed random access in the transcoder
+- Investigate 16x16 or 32x32 macroblock sizes
