--- a/wiki/TechnicalDetails.wiki
+++ b/wiki/TechnicalDetails.wiki
@@ -109,5 +109,5 @@ Ideas for crunch v2.0:
   * Split mipchain from mip0, so individual mips can be transcoded more quickly
   * Support "raw" CRN files that use no additional compression (assume they will be post-compressed by the user using gzip or LZMA - useful for Javascript/WebGL)
   * Support uncompressed palettes, for high speed random access in the transcoder
-  * Investigate 16x16 or 32x32 macroblock sizes
+  * Investigate 16x16 or 32x32 macroblock sizes. Optimize .CRN for bitrates below 1.0 bpp.
   * Clusterered (rate distortion optimized) DDS: Add support for ZLIB, LZO, and Snappy lossless post-compression 
