Edited wiki page TechnicalDetails through web user interface.
git-svn-id: http://crunch.googlecode.com/svn@302 c8dd57aa-ad96-7fdf-15b8-99d5455c0426

--- a/wiki/TechnicalDetails.wiki
+++ b/wiki/TechnicalDetails.wiki
@@ -109,4 +109,4 @@ Ideas for crunch v2.0:
   * Support "raw" CRN files that use no additional compression (assume they will be post-compressed by the user using gzip or LZMA - useful for Javascript/WebGL)
   * Support uncompressed palettes, for high speed random access in the transcoder
   * Investigate 16x16 or 32x32 macroblock sizes. Optimize .CRN for bitrates below 1.0 bpp.
-  * Clusterered (rate distortion optimized) DDS: Add support for ZLIB, LZO, and Snappy lossless post-compression 
+  * Clustered (rate distortion optimized) DDS: Add support for ZLIB, LZO, and Snappy lossless post-compression 
