--- a/wiki/TechnicalDetails.wiki
+++ b/wiki/TechnicalDetails.wiki
@@ -103,6 +103,7 @@ Given a fixed amount of additional developer time to improve .CRN's bitrate/qual
 Ideas for crunch v2.0:
   * Use techniques from LZHAM to improve backend coding (mix bitwise arithmetic with semi-adaptive Huffman).  
   * Port transcoder library to plain C vs. C++
+  * Add smarter prediction to the macroblock tile layout selector indices
   * Native Javascript transcoders
   * Palette compression improvements
   * Split mipchain from mip0, so individual mips can be transcoded more quickly
